Preparing for sending over triangles and a large buffer, for ray tracing :)

--- a/TestOpenCl/TestOpenCl.vcxproj
+++ b/TestOpenCl/TestOpenCl.vcxproj
@@ -156,6 +156,12 @@
   <ItemGroup>
     <Library Include="Depend\lib\OpenCL.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="kernels\Main.kernel" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="snippits\snippits.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
