Getting progress on setting up the ray tracer. Now have triangles and a larger return buffer set up. Next step is to get the x and y component from gid values.

--- a/TestOpenCl/TestOpenCl.vcxproj
+++ b/TestOpenCl/TestOpenCl.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="kernels\Main.kernel" />
+    <None Include="outputs\Image.ppm" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="snippits\snippits.txt" />
