--- a/TestOpenCl/TestOpenCl.vcxproj.filters
+++ b/TestOpenCl/TestOpenCl.vcxproj.filters
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="kernels\Main.kernel" />
+    <None Include="outputs\Image.ppm" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="snippits\snippits.txt" />
